--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,20 @@
-{
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true,
+//{
+//  "extends": "expo/tsconfig.base",
+//  "compilerOptions": {
+//    "strict": true,
 //    "baseUrl": ".",
 //    "paths": {
 //      "@/*": ["src/*"],
 //    }
+//  }
+//}
+{
+  "extends": "expo/tsconfig.base",
+  "compilerOptions": {
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
